fixing border-left scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,11 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+section::-webkit-scrollbar-track {
+    background: transparent;
+  border-left: #5f3b1e 5px solid;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: normal;
